Fix of font not showing up on Firefox

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,6 @@ p {
     grid-row: 1;
     padding: 0 15px;
     margin: 0;
-    text-transform: full-width;
 }
 
 .screen-numbers.dots {
